force-app/main/default/objects/Invoice__c/fields/Install_Item__c.field-meta.xml
<CustomField>
    <fullName>Install_Item__c</fullName>
    <label>Install Item</label>
    <referenceTo>Install_Item__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>