force-app/main/default/objects/Invoice__c/fields/Paid_By__c.field-meta.xml
<CustomField>
    <fullName>Paid_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Paid By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Invoices1</relationshipName>
    <type>Lookup</type>
</CustomField>