force-app/main/default/objects/Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Invoice_Status__c</columns>
    <columns>Approved__c</columns>
    <columns>Paid__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>